# rickroll

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: README.md
docs/implementation/: README.md  build.md  legacy.md
docs/syntax/: README.md  basic.md  builtin_functions.md  control.md  functions.md
src/: compiler.rs  error.rs  expr.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  optimizer.rs  parser.rs  stdlib.rs  tokenizer.rs  util.rs
tests/: compiler-tests.rs  interpreter-tests.rs  tests.rs
