[package]
name = "rickroll"
version = "0.1.0"
authors = ["Leyang Zou <leyang.zou@student.tdsb.on.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
strum = "0.19"
strum_macros = "0.19"
structopt = "0.3"
ansi_term = "0.12"
